@@ -37,8 +37,8 @@ requires:
   Test::Map::Tube: 0.17
   perl: 5.6.0
 resources:
-  bugtracker: https://github.com/tupinek/Task-Map-Tube/issues
-  homepage: https://github.com/tupinek/Task-Map-Tube
+  bugtracker: https://github.com/michal-josef-spacek/Task-Map-Tube/issues
+  homepage: https://github.com/michal-josef-spacek/Task-Map-Tube
   license: http://opensource.org/licenses/artistic-license-2.0.php
-  repository: git://github.com/tupinek/Task-Map-Tube
+  repository: git://github.com/michal-josef-spacek/Task-Map-Tube
 version: '0.47'
