@@ -32,9 +32,9 @@ requires 'Map::Tube::Text::Table' => 0.04;
 requires 'Task::Map::Tube::Metro' => 0.12;
 requires 'Test::Map::Tube' => 0.17;
 requires 'perl' => '5.6.0';
-resources 'bugtracker' => 'https://github.com/tupinek/Task-Map-Tube/issues';
-resources 'homepage' => 'https://github.com/tupinek/Task-Map-Tube';
-resources 'repository' => 'git://github.com/tupinek/Task-Map-Tube';
+resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Task-Map-Tube/issues';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Task-Map-Tube';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Task-Map-Tube';
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 tests_recursive;
