@@ -45,7 +45,7 @@ SEE ALSO
         Interface to test Map::Tube (map data).
 
 REPOSITORY
-    <https://github.com/tupinek/Task-Map-Tube>
+    <https://github.com/michal-josef-spacek/Task-Map-Tube>
 
 AUTHOR
     Michal Špaček <mailto:skim@cpan.org>
