@@ -3,6 +3,7 @@
  - Move bugtracker to github.
  - Rename LICENSE to LICENSE.artistic_2.
  - Update Module::Install to 1.21 version.
+ - Update author github username.
  - Update copyright years.
 
 0.46 2016-06-27T11:37:25+02:00
